# rmb-converter

./: .coverage  .cursorrules  README.md  main.py  prompt_plan.md  pyproject.toml  spec.md  todo.md
src/rmb_converter/: chinese_currency.py  cli.py  converter.py  input_processor.py  number_converter.py
tests/: test_chinese_currency.py  test_cli.py  test_converter.py  test_input_processor.py  test_number_converter.py  test_performance.py
